--- a/shared_resources/sass/_article-container.scss
+++ b/shared_resources/sass/_article-container.scss
@@ -137,16 +137,17 @@
 .double-border-bottom:after, .double-border-top:before {
 		position: relative;
 		top: 30px;
-		width: 100%;
+		left: 15px;
+		width: calc(100% - 30px);
 		height: 10px;
 		background-color: #fff;
 
 		border-bottom: 1px solid $dark-text;
 		border-top: 1px solid $dark-text;
-		border-left: 30px solid #fff;
-		border-right: 30px solid #fff;
+		// border-left: 30px solid #fff;
+		// border-right: 30px solid #fff;
 
-		// box-shadow: 0px 0px 0px 1px $dark-text inset;
+		// box-shadow: 0px 0px 0px 1px $dark-text;
 
 
 }
